@@ -16,7 +16,7 @@ Table of Content
 ================================================================================
 1) Version Info
 ---------------
-ispCP ω Version: 1.0.4
+ispCP ω Version: 	1.0.4
 INSTALL Script:		2.6
 Maintainer:			Benedikt Heintel
 Homepage:			http://www.isp-contol.net
