@@ -1404,7 +1404,7 @@ function reseller_limits_check(&$sql, &$err_msg, $reseller_id, $hpid, $newprops 
 
 	if ($dmn_max != 0) {
 		if ($dmn_current + 1 > $dmn_max) {
-			set_page_message(tr('You have reached your domains limit.<br>You cannot add more domains!'));
+			set_page_message(tr('You have reached your domains limit.<br />You cannot add more domains!'));
 			$error = true;
 		}
 	}
@@ -1412,7 +1412,7 @@ function reseller_limits_check(&$sql, &$err_msg, $reseller_id, $hpid, $newprops 
 	if ($sub_max != 0) {
 		if ($sub_new != -1) {
 			if ($sub_new == 0) {
-				set_page_message(tr('You have a subdomains limit!<br>You cannot add an user with unlimited subdomains!'));
+				set_page_message(tr('You have a subdomains limit!<br />You cannot add an user with unlimited subdomains!'));
 				$error = true;
 			} else if ($sub_current + $sub_new > $sub_max) {
 				set_page_message(tr('You are exceeding your subdomains limit!'));
@@ -1424,7 +1424,7 @@ function reseller_limits_check(&$sql, &$err_msg, $reseller_id, $hpid, $newprops 
 	if ($als_max != 0) {
 		if ($als_new != -1) {
 			if ($als_new == 0) {
-				set_page_message(tr('You have an aliases limit!<br>You cannot add an user with unlimited aliases!'));
+				set_page_message(tr('You have an aliases limit!<br />You cannot add an user with unlimited aliases!'));
 				$error = true;
 			} else if ($als_current + $als_new > $als_max) {
 				set_page_message(tr('You Are Exceeding Your Alias Limit!'));
@@ -1435,16 +1435,17 @@ function reseller_limits_check(&$sql, &$err_msg, $reseller_id, $hpid, $newprops 
 
 	if ($mail_max != 0) {
 		if ($mail_new == 0) {
-			set_page_message(tr('You have a mail accounts limit!<br>You cannot add an user with unlimited mail accounts!'));
+			set_page_message(tr('You have a mail accounts limit!<br />You cannot add an user with unlimited mail accounts!'));
 			$error = true;
 		} else if ($mail_current + $mail_new > $mail_max) {
 			set_page_message(tr('You are exceeding your mail accounts limit!'));
+			$error = true;
 		}
 	}
 
 	if ($ftp_max != 0) {
 		if ($ftp_new == 0) {
-			set_page_message(tr('You have a FTP accounts limit!<br>You cannot add an user with unlimited FTP accounts!'));
+			set_page_message(tr('You have a FTP accounts limit!<br />You cannot add an user with unlimited FTP accounts!'));
 			$error = true;
 		} else if ($ftp_current + $ftp_new > $ftp_max) {
 			set_page_message(tr('You are exceeding your FTP accounts limit!'));
@@ -1455,7 +1456,7 @@ function reseller_limits_check(&$sql, &$err_msg, $reseller_id, $hpid, $newprops 
 	if ($sql_db_max != 0) {
 		if ($sql_db_new != -1) {
 			if ($sql_db_new == 0) {
-				set_page_message(tr('You have a SQL databases limit!<br>You cannot add an user with unlimited SQL databases!'));
+				set_page_message(tr('You have a SQL databases limit!<br />You cannot add an user with unlimited SQL databases!'));
 				$error = true;
 			} else if ($sql_db_current + $sql_db_new > $sql_db_max) {
 				set_page_message(tr('You are exceeding your SQL databases limit!'));
@@ -1467,10 +1468,10 @@ function reseller_limits_check(&$sql, &$err_msg, $reseller_id, $hpid, $newprops 
 	if ($sql_user_max != 0) {
 		if ($sql_user_new != -1) {
 			if ($sql_user_new == 0) {
-				set_page_message(tr('You have an SQL users limit!<br>You cannot add an user with unlimited SQL users!'));
+				set_page_message(tr('You have an SQL users limit!<br />You cannot add an user with unlimited SQL users!'));
 				$error = true;
 			} else if ($sql_db_new == -1) {
-				set_page_message(tr('You have disabled SQL databases for this user!<br>You cannot have SQL users here!'));
+				set_page_message(tr('You have disabled SQL databases for this user!<br />You cannot have SQL users here!'));
 				$error = true;
 			} else if ($sql_user_current + $sql_user_new > $sql_user_max) {
 				set_page_message(tr('You are exceeding your SQL database limit!'));
@@ -1481,7 +1482,7 @@ function reseller_limits_check(&$sql, &$err_msg, $reseller_id, $hpid, $newprops 
 
 	if ($traff_max != 0) {
 		if ($traff_new == 0) {
-			set_page_message(tr('You have a traffic limit!<br>You cannot add an user with unlimited traffic!'));
+			set_page_message(tr('You have a traffic limit!<br />You cannot add an user with unlimited traffic!'));
 			$error = true;
 		} else if ($traff_current + $traff_new > $traff_max) {
 			set_page_message(tr('You are exceeding your traffic limit!'));
@@ -1491,7 +1492,7 @@ function reseller_limits_check(&$sql, &$err_msg, $reseller_id, $hpid, $newprops 
 
 	if ($disk_max != 0) {
 		if ($disk_new == 0) {
-			set_page_message(tr('You have a disk limit!<br>You cannot add an user with unlimited disk!'));
+			set_page_message(tr('You have a disk limit!<br />You cannot add an user with unlimited disk!'));
 			$error = true;
 		} else if ($disk_current + $disk_new > $disk_max) {
 			set_page_message(tr('You are exceeding your disk limit!'));
@@ -1499,7 +1500,7 @@ function reseller_limits_check(&$sql, &$err_msg, $reseller_id, $hpid, $newprops 
 		}
 	}
 
-	if ($error == true) {
+	if ($error === true) {
 		return false;
 	}
 
